Ki nézett meg csinálása és toust meg a játék menet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,128 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="141dp"
+        tools:layout_editor_absoluteY="50dp"
+        android:padding="12dp"
+        >
+
+        <ImageView
+            android:id="@+id/im_my"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/rock" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="A te választásod"
+            android:textSize="30dp"
+
+            />
+
+        <ImageView
+            android:layout_marginTop="30dp"
+            android:id="@+id/im_cup"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/rock"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="A gép választása"
+            android:textSize="30dp" />
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="12dp">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Eredmény: "
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=" Ember: "
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/emberEredmeny"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="0"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=" Computer: "
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/computerEredmeny"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="0"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
     <Button
         android:id="@+id/b_rock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Rock" />
+        android:layout_margin="10dp"
+        android:text="Rock"/>
 
     <Button
-        android:id="@+id/b_paper"
+        android:id="@+id/b_papper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Paper" />
+        android:layout_margin="10dp"
+        android:text="Papper" />
+
 
     <Button
+        android:id="@+id/b_scissors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Ollo"
-        android:id="@+id/b_ollo"/>
-
+        android:layout_margin="10dp"
+        android:text="Scissors"/>
 </LinearLayout>
+</LinearLayout></LinearLayout>
