--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,25 +16,30 @@
         tools:layout_editor_absoluteY="50dp"
         android:padding="12dp"
         >
-
-        <ImageView
-            android:id="@+id/im_my"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/rock" />
-
-        <TextView
-            android:id="@+id/textView2"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="A te választásod"
-            android:textSize="30dp"
+            android:orientation="horizontal">
 
-            />
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Döntetlenek száma: "
+                android:textSize="30dp"
+                />
+            <TextView
+                android:id="@+id/dontetlen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="30dp"/>
 
+        </LinearLayout>
+        //------------------------------------------------------
         <ImageView
             android:layout_marginTop="30dp"
             android:id="@+id/im_cup"
@@ -52,6 +57,26 @@
             android:gravity="center"
             android:text="A gép választása"
             android:textSize="30dp" />
+
+        <ImageView
+            android:id="@+id/im_my"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/rock"
+            />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="A te választásod"
+            android:textSize="30dp"
+
+            />
+
 
 
     <LinearLayout
@@ -112,24 +137,30 @@
         android:layout_gravity="center">
     <Button
         android:id="@+id/b_rock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:background="@drawable/rock"
         android:layout_margin="10dp"
-        android:text="Rock"/>
+        app:backgroundTint="#000000"
+        />
 
     <Button
         android:id="@+id/b_papper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_margin="10dp"
-        android:text="Papper" />
+        android:background="@drawable/paper"
+        app:backgroundTint="#000000"
+       />
 
 
     <Button
         android:id="@+id/b_scissors"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_margin="10dp"
-        android:text="Scissors"/>
+        android:background="@drawable/scissors"
+        app:backgroundTint="#000000"
+       />
 </LinearLayout>
 </LinearLayout></LinearLayout>
